feat: 본문으로 바로가기 링크 생성

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,6 +9,31 @@
   margin: 0 auto;
 }
 
+.skipLink {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 12px 20px;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.skipLink:not(:focus) {
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  border: 0;
+}
+
 .header {
   padding: 48px 24px 24px 24px;
 }
