--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,6 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
 }
@@ -110,6 +109,9 @@ ul {
 }
 button {
   color: #000;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 body {
   margin: 0;
