feat: 키보드 사용자를 위한 skip link 추가
- 본문, 항공권 예매, 여행지 추천 섹션으로 바로 이동 가능한 링크 제공

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,25 @@
   background-color: white;
   text-align: center;
 }
+
+.skipNav {
+  position: relative;
+}
+
+.skipLink {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  background: black;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 4px;
+  text-decoration: none;
+  z-index: 1000;
+  width: fit-content;
+}
+
+.skipLink:focus {
+  left: 0;
+  top: 0;
+}
