--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -19,6 +19,13 @@
   height: 246px;
 }
 
+.carouselCardButton {
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 0;
+}
+
 .cardActive {
   display: block;
 }
@@ -39,6 +46,7 @@
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
+  text-align: left;
 }
 
 .cardTitle {
