--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -52,7 +52,7 @@
   margin-bottom: 15px;
 }
 
-.passengerCount span {
+.passengerCount legend {
   font-weight: 700;
 }
 
@@ -77,7 +77,6 @@
 .counter span {
   font-size: 18px;
   text-align: center;
-  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
