--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,19 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
 }
+
+a,
+a:link,
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus,
+a:active {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+}
