feat: 본문으로 바로가기 링크 제공

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,25 @@
   background-color: white;
   text-align: center;
 }
+
+.skipLink {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skipLink:focus {
+  left: 0;
+  top: 0;
+  width: auto;
+  height: auto;
+  padding: 8px 16px;
+  background: #005fcc;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 4px;
+  z-index: 1000;
+}
