--- a/src/Accessibility.css
+++ b/src/Accessibility.css
@@ -9,3 +9,16 @@
   white-space: nowrap;
   border: 0;
 }
+
+.skip {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  overflow: hidden;
+}
+
+.skip:focus {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
