--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -14,6 +14,8 @@
   position: relative;
   margin-left: 5px;
   cursor: pointer;
+  padding: 0;
+  height: 16px;
 }
 
 .helpIcon {
@@ -47,18 +49,23 @@
 
 .passengerCount {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   margin-bottom: 15px;
 }
 
 .passengerCount legend {
   font-weight: 700;
+  float: left;
+  width: auto;
+  margin: 0;
+  padding: 0;
 }
 
 .counter {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .counter button {
