--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,29 @@
   background-color: white;
   text-align: center;
 }
+
+.skipLink {
+  position: absolute;
+  top: -40px;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.skipLink:focus {
+  top: 0;
+  left: 0;
+  width: auto;
+  height: auto;
+  clip: auto;
+  overflow: visible;
+  padding: 8px 16px;
+  background: #000;
+  color: #fff;
+  z-index: 100;
+}
