--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -13,14 +13,27 @@
   position: relative;
   border-radius: 4px;
   border: 1px solid rgba(217, 217, 217, 0.5);
-  overflow: hidden;
   display: none;
   width: 100%;
   height: 246px;
+  padding: 4px;
 }
 
 .cardActive {
   display: block;
+}
+
+.link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
+.link:focus {
+  outline: 2px solid #000;
+  outline-offset: 1px;
 }
 
 .cardImage {
@@ -37,7 +50,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.7) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
 }
 
