♻️ refactor: 올바른 시맨틱 태그 사용

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,18 @@
   background-color: white;
   text-align: center;
 }
+
+.skipNav {
+  position: relative;
+}
+
+.skipLink {
+  position: absolute;
+  z-index: -999;
+  width: fit-content;
+}
+
+.skipLink:focus {
+  left: 0;
+  top: 0;
+}
