--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -39,6 +39,10 @@
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
+
+  p {
+    text-align: left;
+  }
 }
 
 .cardTitle {
