--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -14,6 +14,8 @@
   position: relative;
   margin-left: 5px;
   cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
 
 .helpIcon {
@@ -77,7 +79,6 @@
 .counter span {
   font-size: 18px;
   text-align: center;
-  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
