--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -23,6 +23,14 @@
   display: block;
 }
 
+.cardLink {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
 .cardImage {
   width: 100%;
   height: 100%;
