--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,8 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
