--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -90,3 +90,15 @@
 .card a {
   color: inherit;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
