--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -31,6 +31,14 @@
   object-position: center;
 }
 
+.card a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .cardContent {
   position: absolute;
   top: 0;
