--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -19,7 +19,7 @@
   height: 246px;
 }
 
-.card button {
+.cardLink {
   background: none;
   border: none;
   padding: 0;
@@ -28,6 +28,8 @@
   height: 100%;
   cursor: pointer;
   display: block;
+  text-decoration: none;
+  color: inherit;
 }
 
 .cardActive {
