feat: 여행 섹션의 링크 스타일 추가 및 호버 효과 개선

--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -86,3 +86,13 @@
   width: 24px;
   height: 24px;
 }
+.travelSection a {
+  color: #000;
+  text-decoration: none;
+}
+
+.travelSection a:hover,
+.travelSection a:focus {
+  color: #000;
+  text-decoration: underline;
+}
