refactor: div role=button 태그를 a 태그로 수정

--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -17,6 +17,16 @@
   display: none;
   width: 100%;
   height: 246px;
+  text-decoration: none;
+  color: inherit;
+
+  &:visited {
+    color: inherit;
+  }
+
+  &:hover {
+    color: inherit;
+  }
 }
 
 .cardActive {
