--- a/src/Accessibility.css
+++ b/src/Accessibility.css
@@ -9,3 +9,16 @@
   white-space: nowrap;
   border: 0;
 }
+
+.skipLink {
+  position: absolute;
+  left: 0;
+  top: -40px;
+  background: #000;
+  color: #fff;
+  padding: 8px 12px;
+  z-index: 1000;
+}
+.skipLink:focus {
+  top: 0;
+}
